# The-AI-Engineer-Challenge

./: .gitignore  pyproject.toml  vercel.json
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: Header.jsx  Home.jsx
