[project]
name = "beyond-chatgpt"
version = "0.1.0"
description = "gpt-like-a-dev"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "openai",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
    "python-multipart>=0.0.18",
    "python-dotenv>=1.2.2",
    "ragas>=0.1.0,<0.4.0",
    "deepeval>=2.9.3",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "transformers>=5.12.1",
    "accelerate>=1.14.0",
    "huggingface-hub>=1.20.1",
    "torch>=2.12.1",
    "langchain>=0.3.25",
    "langsmith>=0.1.147",
    "cohere>=7.0.4",
    "tavily-python>=0.7.26",
    "anthropic>=0.49.0",
    "requests>=2.34.2",
    "numpy>=1.26.4",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "matplotlib>=3.11.0",
    "scikit-network>=0.33.5",
    "langchain-community==0.3.0",
    "langchain-google-vertexai>=2.0.24",
]
